navigator finished, all that's left is search bar

--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -15,6 +15,9 @@ button:hover{
 .dropdown-item:hover{
   background: $primary;
 }
+.navbar{
+  height: 100px;
+}
 .navbar-item:hover{
   background: lightgrey;
   color: black;
