--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -6,10 +6,10 @@ body{
   -webkit-font-smoothing: antialiased;
   text-align: center;
 }
-button{
+.button{
   background: $primary;
 }
-button:hover{
+.button:hover{
   background: lightgrey;
 }
 .dropdown-item:hover{
