--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -7,46 +7,8 @@ body{
   -webkit-font-smoothing: antialiased;
   text-align: center;
 }
-.articles{
-  margin-top: 4rem;
-  padding-bottom: 3rem;
-  opacity: 0.95;
-}
-.articles .content p {
-  line-height: 1.9;
-}
-.container{
-  opacity: 0.95;
-}
-.media-left {
-  margin-bottom: 1rem;
-}
-.article-title {
-  font-size: 2rem;
-  font-weight: lighter;
-  line-height: 2;
-}
-.article-subtitle {
-  color: #909AA0;
-  margin-bottom: 3rem;
-}
-.article-body {
-  line-height: 1.4;
-  text-align: left;
-}
-#add-column{
-  margin-top: 20px;
-  margin-right: 100px;
-  margin-left: 100px;
-}
-textarea#ingredients {
-  height: 100px;
-  width: 500px;
-}
-textarea#method{
-  height: 300px;
-  width: 500px;
-}
+
+//NAVIGATOR
 .button{
   background: $primary;
 }
@@ -62,5 +24,98 @@ textarea#method{
 .navbar-item:hover{
   background: lightgrey;
   color: black;
+}
+#nav-item{
+  background: none;
+  border: none;
+}
+#nav-search{
+  padding-top: 33px;
+}
+#nav-box{
+  width: 200px;
+}
+#nav-logo {
+  height: 70px;
+  margin-top: 10px;
+}
+#nav-cutlery {
+  height: 30px;
+  padding-right: 5px;
+}
+#nav-beverages {
+  height: 30px;
+  padding-right: 5px;
+}
+#nav-desserts {
+  height: 30px;
+  padding-right: 5px;
+}
+
+//LOGIN
+#log-login{
+  background: lightgrey;
+}
+
+//REGISTER
+#reg-register{
+  background: lightgrey;
+}
+
+//RECIPE
+#rec-card_image{
+  max-width: 100%;
+  height: auto;
+}
+#rec-heart {
+  padding-top: 5px;
+  padding-left: 10px;
+  height: 25px;
+}
+#rec-method{
+  margin-left: 40px;
+  text-align: justify;
+  text-justify: inter-word;
+  line-height: 1.4;
+}
+#rec-ingredients{
+  margin-right: 40px;
+  text-align: left;
+  text-justify: inter-word;
+}
+#rec-article{
+  margin-top: 4rem;
+  padding-bottom: 3rem;
+  opacity: 0.95;
+}
+#rec-card-content {
+  line-height: 1.9;
+}
+#rec-article-title {
+  font-size: 2rem;
+  font-weight: lighter;
+  line-height: 2;
+}
+#rec-article-subtitle {
+  color: #909AA0;
+  margin-bottom: 3rem;
+}
+#rec-media-left {
+  margin-bottom: 1rem;
+}
+
+//ADD RECIPE
+#add-column{
+  margin-top: 20px;
+  margin-right: 100px;
+  margin-left: 100px;
+}
+#add-ingredients {
+  height: 100px;
+  width: 500px;
+}
+#add-method{
+  height: 300px;
+  width: 500px;
 }
 
