added home page styling to css file

--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -8,6 +8,13 @@ body{
   text-align: center;
 }
 
+#home-container {
+  margin-top: 50px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 20px;
+}
+
 //NAVIGATOR
 .button{
   background: $primary;
