--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -148,10 +148,10 @@ $colors: (
 }
 
 //ADD RECIPE
-#add-column {
-  margin-top: 20px;
-  margin-right: 100px;
-  margin-left: 100px;
+.add-column {
+  margin-top: 2%;
+  margin-right: 10%;
+  margin-left: 10%;
 }
 
 #container-home {
@@ -159,18 +159,18 @@ $colors: (
 }
 
 #add-ingredients {
+  width: 100%;
   height: 100px;
-  width: 500px;
+
 }
 
 #add-method {
   height: 300px;
-  width: 500px;
+  width: 100%;
 }
 
 #im {
   color: black;
-
 }
 
 //IMAGE HOME
