--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -100,6 +100,11 @@ $colors: (
   background: lightgrey;
 }
 
+.body-register{
+  margin-right: 0%;
+  margin-left: 0%;
+}
+
 //RECIPE
 #rec-card_image {
   max-width: 100%;
