--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -52,6 +52,8 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
 #nav-sign-in {
   padding-left: 0px;
   padding-right: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .navbar {
