--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -116,6 +116,9 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
 .subtitle-login{
   padding-bottom: 3%;
 }
+#container-login {
+  margin-top: 0px;
+}
 
 //REGISTER
 #reg-register {
@@ -188,10 +191,6 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
   margin-left: 10%;
 }
 
-#container-home {
-  margin-top: 0px;
-}
-
 #add-ingredients {
   width: 100%;
   height: 100px;
@@ -207,7 +206,7 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
   color: black;
 }
 
-//IMAGE HOME
+//RECIPE BOX
 .text-block {
 
   position: absolute;
@@ -249,3 +248,10 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
   -o-transition: all 0.6s ease-in-out;
 }
 
+//HOME PAGE
+#home-container{
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-right: 5%;
+  padding-left: 5%;
+}
