--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -102,10 +102,13 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
 #search-field {
   width: 350px;
   height: 40px;
-  margin-bottom: 50px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 #search-in-field {
+  margin-top: 25px;
+  margin-bottom: 25px;
   width: 80px;
   height: 40px;
 }
