--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -260,4 +260,25 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
   padding-left: 5%;
 }
 
+//LANDING PAGE
+#container-landing #show-recipes {
+  position: absolute;
+  top: 300px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  opacity: 0.75;
+  padding: 12px 24px;
+  width: 200px;
+  height: 50px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
 
+#container-landing #show-recipes:hover {
+  background-color: gray;
+}
