Favicon Done and wip for title changing.

--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -263,7 +263,7 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
 //LANDING PAGE
 #container-landing #show-recipes {
   position: absolute;
-  top: 300px;
+  top: 350px;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -277,8 +277,14 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  transition: all 0.2s;
 }
 
 #container-landing #show-recipes:hover {
   background-color: gray;
+}
+
+#container-landing {
+  position: relative;
+  width: 10px;
 }
