Category and search responsive

--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -260,6 +260,22 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
   padding-left: 5%;
 }
 
+#search-container{
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+
+#category-container{
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+
 //LANDING PAGE
 #container-landing #show-recipes {
   position: absolute;
