Recipe title now is bold

--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -175,7 +175,7 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
 
 #rec-article-title {
   font-size: 2rem;
-  font-weight: lighter;
+  font-weight: bold;
   line-height: 2;
 }
 
