--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -212,6 +212,11 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
   width: 100%;
 }
 
+#add-upload-button{
+  height: 30px;
+  padding-right: 5px;
+}
+
 //#im {
 //  color: black;
 //}
